--- a/howto/functional.po
+++ b/howto/functional.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-02 17:47-0300\n"
+"PO-Revision-Date: 2021-02-02 17:53-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -619,7 +619,7 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:326
 msgid "Generator expressions and list comprehensions"
-msgstr "Expresiones generadoras y listas por comprension"
+msgstr "Expresiones generadoras y listas por comprensión"
 
 #: ../Doc/howto/functional.rst:328
 msgid ""
