Actualizo diccionario y arreglo typo

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-03 19:49-0300\n"
+"PO-Revision-Date: 2021-02-03 19:54-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1630,7 +1630,7 @@ msgid ""
 msgstr ""
 "El módulo :mod:`operator` se mencionó anteriormente. Contiene un conjunto de "
 "funciones que corresponden a los operadores de Python. Estas funciones a "
-"menudo son útilos en código en estilo funcional porque le salvan de escribir "
+"menudo son útiles en código en estilo funcional porque le salvan de escribir "
 "funciones triviales que realizan una sola operación."
 
 #: ../Doc/howto/functional.rst:1087
