--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-01 19:51-0300\n"
+"PO-Revision-Date: 2021-02-08 20:06-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1148,7 +1148,7 @@ msgstr ""
 msgid ""
 ":meth:`xml.etree.ElementTree.TreeBuilder.end` closes the current element"
 msgstr ""
-":meth:`xml.etree.ElementTree.TreeBuilder.end` cierra el elemento actual."
+":meth:`xml.etree.ElementTree.TreeBuilder.end` cierra el elemento actual"
 
 #: ../Doc/whatsnew/3.2.rst:738
 msgid ""
@@ -1298,7 +1298,7 @@ msgstr ""
 #: ../Doc/whatsnew/3.2.rst:913 ../Doc/whatsnew/3.2.rst:1783
 #: ../Doc/whatsnew/3.2.rst:1828
 msgid "(Contributed by Raymond Hettinger.)"
-msgstr "(Contribuido por Raymond Hettinger.)"
+msgstr "(Contribución por Raymond Hettinger.)"
 
 #: ../Doc/whatsnew/3.2.rst:824
 msgid ""
@@ -1306,38 +1306,50 @@ msgid ""
 "function converts an old-style comparison function to modern :term:`key "
 "function`:"
 msgstr ""
+"Para ayudar en la migración de programas desde Python 2, la función :func:"
+"`functools.cmp_to_key` convierte una función de comparación de estilo "
+"antiguo en la nueva :term:`key function`:"
 
 #: ../Doc/whatsnew/3.2.rst:831
 msgid ""
 "For sorting examples and a brief sorting tutorial, see the `Sorting HowTo "
 "<https://wiki.python.org/moin/HowTo/Sorting/>`_ tutorial."
 msgstr ""
+"Para obtener ejemplos de ordenación y un breve tutorial, consulte el "
+"tutorial `Sorting HowTo <https://wiki.python.org/moin/HowTo/Sorting/>`_."
 
 #: ../Doc/whatsnew/3.2.rst:837
 msgid "itertools"
-msgstr ""
+msgstr "itertools"
 
 #: ../Doc/whatsnew/3.2.rst:839
 msgid ""
 "The :mod:`itertools` module has a new :func:`~itertools.accumulate` function "
 "modeled on APL's *scan* operator and Numpy's *accumulate* function:"
 msgstr ""
+"El módulo :mod:`itertools` tiene una nueva función :func:`~itertools."
+"accumulate` modelada en el operador *scan* de APL y la función *accumulate* "
+"de Numpy:"
 
 #: ../Doc/whatsnew/3.2.rst:850
 msgid ""
 "For an example using :func:`~itertools.accumulate`, see the :ref:`examples "
 "for the random module <random-examples>`."
 msgstr ""
+"Para un ejemplo usando :func:`~itertools.accumulate`, vea los :ref:`ejemplos "
+"para el módulo aleatorio <random-examples>`."
 
 #: ../Doc/whatsnew/3.2.rst:853
 msgid ""
 "(Contributed by Raymond Hettinger and incorporating design suggestions from "
 "Mark Dickinson.)"
 msgstr ""
+"(Contribución de Raymond Hettinger e incorporando sugerencias de diseño de "
+"Mark Dickinson.)"
 
 #: ../Doc/whatsnew/3.2.rst:857
 msgid "collections"
-msgstr ""
+msgstr "collections"
 
 #: ../Doc/whatsnew/3.2.rst:859
 msgid ""
@@ -1349,6 +1361,13 @@ msgid ""
 "only have positive counts, and the latter is more suitable for use cases "
 "that allow negative counts:"
 msgstr ""
+"La clase :class:`collections.Counter` ahora tiene dos formas de resta in "
+"situ, el operador existente *-=* para `saturación de resta <https://es."
+"wikipedia.org/wiki/Aritm%C3%A9tica_de_saturaci%C3%B3n> `_ y el nuevo método :"
+"meth:`~collections.Counter.subtract` para la resta regular. El primero es "
+"adecuado para `muticonjunto <https://es.wikipedia.org/wiki/Multiconjunto>`_ "
+"que solo tienen recuentos positivos, y el último es más adecuado para casos "
+"de uso que permiten recuentos negativos:"
 
 #: ../Doc/whatsnew/3.2.rst:880
 msgid ""
@@ -1356,12 +1375,17 @@ msgid ""
 "`~collections.OrderedDict.move_to_end` which takes an existing key and moves "
 "it to either the first or last position in the ordered sequence."
 msgstr ""
+"La clase :class:`collections.OrderedDict` tiene un nuevo método :meth:"
+"`~collections.OrderedDict.move_to_end` que toma una clave existente y mueve "
+"a la primera o última posición de la secuencia ordenada."
 
 #: ../Doc/whatsnew/3.2.rst:884
 msgid ""
 "The default is to move an item to the last position.  This is equivalent of "
 "renewing an entry with ``od[k] = od.pop(k)``."
 msgstr ""
+"El valor predeterminado es mover un elemento a la última posición. Esto es "
+"equivalente a renovar una entrada con ``od[k] = od.pop(k)``."
 
 #: ../Doc/whatsnew/3.2.rst:887
 msgid ""
@@ -1369,6 +1393,10 @@ msgid ""
 "example, an ordered dictionary can be used to track order of access by aging "
 "entries from the oldest to the most recently accessed."
 msgstr ""
+"Una operación de mover al final rápida es útil para volver a secuenciar "
+"entradas. Por ejemplo, se puede usar un diccionario ordenado para rastrear "
+"el orden de acceso a las entradas por antigüedad desde la más antigua hasta "
+"la más reciente."
 
 #: ../Doc/whatsnew/3.2.rst:901
 msgid ""
@@ -1376,10 +1404,13 @@ msgid ""
 "`~collections.deque.count` and :meth:`~collections.deque.reverse` that make "
 "them more substitutable for :class:`list` objects:"
 msgstr ""
+"La clase :class:`collections.deque` desarrolló dos métodos nuevos :meth:"
+"`~collections.deque.count` y :meth:`~collections.deque.reverse` que los "
+"hacen más intercambiables con los objetos :class:`list` :"
 
 #: ../Doc/whatsnew/3.2.rst:916
 msgid "threading"
-msgstr ""
+msgstr "threading"
 
 #: ../Doc/whatsnew/3.2.rst:918
 msgid ""
@@ -1389,13 +1420,22 @@ msgid ""
 "that a task with multiple preconditions does not run until all of the "
 "predecessor tasks are complete."
 msgstr ""
+"El módulo :mod:`threading` tiene una nueva clase :class:`~threading.Barrier` "
+"de sincronización para hacer que varios hilos esperen hasta que todos hayan "
+"alcanzado un punto de barrera común. Las barreras son útiles para asegurarse "
+"de que una tarea con múltiples condiciones previas no se ejecute hasta que "
+"se completen todas las tareas predecesoras."
 
+# https://en.wikipedia.org/wiki/Synchronous_rendezvous redirije a https://en.wikipedia.org/wiki/Barrier_(computer_science)
 #: ../Doc/whatsnew/3.2.rst:924
 msgid ""
 "Barriers can work with an arbitrary number of threads.  This is a "
 "generalization of a `Rendezvous <https://en.wikipedia.org/wiki/"
 "Synchronous_rendezvous>`_ which is defined for only two threads."
 msgstr ""
+"Las barreras pueden trabajar con un número arbitrario de hilos. Esto es una "
+"generalización de `barrera informática <https://es.wikipedia.org/wiki/"
+"Barrera_(inform%C3%A1tica)>`_que se define solo para dos hilos."
 
 #: ../Doc/whatsnew/3.2.rst:928
 msgid ""
@@ -1405,10 +1445,15 @@ msgid ""
 "one of them can loop back and re-enter the barrier.  The barrier fully "
 "resets after each cycle."
 msgstr ""
+"Implementado como una barrera cíclica de dos fases, los objetos :class:"
+"`~threading.Barrier` son adecuados para su uso en bucles. Las fases "
+"separadas de *llenado* y *drenaje* aseguran que todos los hilos se liberen "
+"(drenan) antes de que cualquiera de ellos pueda retornar y volver a entrar "
+"en la barrera. La barrera se restablece completamente después de cada ciclo."
 
 #: ../Doc/whatsnew/3.2.rst:933
 msgid "Example of using barriers::"
-msgstr ""
+msgstr "Ejemplo de uso de barreras::"
 
 #: ../Doc/whatsnew/3.2.rst:947
 msgid ""
@@ -1418,6 +1463,12 @@ msgid ""
 "threads stay alive and continue to do work (summarizing ballots) after the "
 "barrier point is crossed."
 msgstr ""
+"En este ejemplo, la barrera impone una regla de que los votos no se pueden "
+"contar en ningún lugar de votación hasta que se cierren todas las urnas. "
+"Observe cómo una solución con una barrera es similar a una con :meth:"
+"`threading.Thread.join`, pero los hilos se mantienen vivos y continúan "
+"trabajando (resumiendo las papeletas) después de que se cruza el punto de la "
+"barrera."
 
 #: ../Doc/whatsnew/3.2.rst:953
 msgid ""
@@ -1427,6 +1478,11 @@ msgid ""
 "waiting threads are released and a :exc:`~threading.BrokenBarrierError` "
 "exception is raised::"
 msgstr ""
+"Si alguna de las tareas predecesoras puede bloquearse o retrasarse, se puede "
+"crear una barrera con un parámetro opcional *timeout*. Luego, si el período "
+"de tiempo de espera transcurre antes de que todas las tareas predecesoras "
+"alcancen el punto de barrera, se liberan todos los hilos en espera y se "
+"genera una excepción :exc:`~threading.BrokenBarrierError`::"
 
 #: ../Doc/whatsnew/3.2.rst:969
 msgid ""
@@ -1434,6 +1490,9 @@ msgid ""
 "sites do not finish before midnight, the barrier times-out and the ballots "
 "are sealed and deposited in a queue for later handling."
 msgstr ""
+"En este ejemplo, la barrera impone una regla más sólida. Si algunos sitios "
+"electorales no terminan antes de la medianoche, la barrera expira y las "
+"boletas se sellan y se depositan en una cola para su posterior manejo."
 
 #: ../Doc/whatsnew/3.2.rst:973
 msgid ""
@@ -1444,12 +1503,20 @@ msgid ""
 "<https://greenteapress.com/semaphores/LittleBookOfSemaphores.pdf>`_, "
 "*section 3.6*."
 msgstr ""
+"Consulte `Patrones de sincronización de barreras <http://osl.cs.illinois.edu/"
+"media/papers/karmani-2009-barrier_synchronization_pattern.pdf>` _ para ver "
+"más ejemplos de cómo se pueden utilizar las barreras en computación "
+"paralela. Además, hay una explicación simple pero completa de las barreras "
+"en `The Little Book of Semaphores <https://greenteapress.com/semaphores/"
+"LittleBookOfSemaphores.pdf>`_, *sección 3.6*."
 
 #: ../Doc/whatsnew/3.2.rst:979
 msgid ""
 "(Contributed by Kristján Valur Jónsson with an API review by Jeffrey Yasskin "
 "in :issue:`8777`.)"
 msgstr ""
+"(Contribución de Kristján Valur Jónsson con una revisión de API de Jeffrey "
+"Yasskin en :issue:`8777`.)"
 
 #: ../Doc/whatsnew/3.2.rst:983
 msgid "datetime and time"
