--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-08 20:06-0300\n"
+"PO-Revision-Date: 2021-02-08 23:40-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1520,7 +1520,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:983
 msgid "datetime and time"
-msgstr ""
+msgstr "datetime and time"
 
 #: ../Doc/whatsnew/3.2.rst:985
 msgid ""
@@ -1529,6 +1529,11 @@ msgid ""
 "offset and timezone name. This makes it easier to create timezone-aware "
 "datetime objects::"
 msgstr ""
+"El módulo :mod:`datetime` tiene un nuevo tipo :class:`~datetime.timezone` "
+"que implementa la interfaz :class:`~datetime.tzinfo` retornando un "
+"desplazamiento fijo desde UTC y un nombre de zona horaria. Esto hace que sea "
+"más fácil crear objetos de fecha y hora que tengan en cuenta la zona "
+"horaria::"
 
 #: ../Doc/whatsnew/3.2.rst:998
 msgid ""
@@ -1536,12 +1541,19 @@ msgid ""
 "`float` and divided by :class:`float` and :class:`int` objects. And :class:"
 "`~datetime.timedelta` objects can now divide one another."
 msgstr ""
+"Además, los objetos :class:`~datetime.timedelta` ahora pueden ser "
+"multiplicados por objetos :class:`float` y divididos por objetos :class:"
+"`float` e :class:`int`. Y los objetos :class:`~datetime.timedelta` ahora se "
+"pueden dividir entre sí."
 
 #: ../Doc/whatsnew/3.2.rst:1002
 msgid ""
 "The :meth:`datetime.date.strftime` method is no longer restricted to years "
 "after 1900.  The new supported year range is from 1000 to 9999 inclusive."
 msgstr ""
+"El método :meth:`datetime.date.strftime` ya no está restringido a años "
+"posteriores a 1900. El nuevo rango de años admitido es de 1000 a 9999 "
+"inclusive."
 
 #: ../Doc/whatsnew/3.2.rst:1005
 msgid ""
@@ -1550,6 +1562,11 @@ msgid ""
 "means that for a two-digit year, the century is guessed according to the "
 "POSIX rules governing the ``%y`` strptime format."
 msgstr ""
+"Siempre que se utiliza un año de dos dígitos en una tupla de tiempo, la "
+"interpretación se rige por :attr:`time.accept2dyear`. El valor "
+"predeterminado es ``True``, lo que significa que para un año de dos dígitos, "
+"el siglo se calcula de acuerdo con las reglas POSIX que rigen el formato "
+"strptime ``%y``."
 
 #: ../Doc/whatsnew/3.2.rst:1010
 msgid ""
@@ -1558,6 +1575,10 @@ msgid ""
 "accept2dyear` be set to ``False`` so that large date ranges can be used "
 "without guesswork::"
 msgstr ""
+"A partir de Py3.2, el uso de la heurística de adivinación del siglo emitirá "
+"un :exc:`DeprecationWarning`. En su lugar, se recomienda que :attr:`time."
+"accept2dyear` se establezca en ``False`` para que se puedan usar rangos de "
+"fechas grandes sin suposiciones::"
 
 #: ../Doc/whatsnew/3.2.rst:1029
 msgid ""
@@ -1567,6 +1588,11 @@ msgid ""
 "strftime` functions will accept the full range supported by the "
 "corresponding operating system functions."
 msgstr ""
+"Varias funciones ahora tienen rangos de fechas significativamente ampliados. "
+"Cuando :attr:`time.accept2dyear` es falso, la función :func:`time.asctime` "
+"aceptará cualquier año que quepa en un entero C, mientras que las funciones :"
+"func:`time.mktime` y :func:`time.strftime` aceptarán la gama completa "
+"admitida por las funciones correspondientes del sistema operativo."
 
 #: ../Doc/whatsnew/3.2.rst:1035
 msgid ""
@@ -1574,16 +1600,21 @@ msgid ""
 "`1289118`, :issue:`5094`, :issue:`6641`, :issue:`2706`, :issue:`1777412`, :"
 "issue:`8013`, and :issue:`10827`.)"
 msgstr ""
+"(Contribución de Alexander Belopolsky y Victor Stinner en :issue:`1289118`, :"
+"issue:`5094`, :issue:`6641`, :issue:`2706`, :issue:`1777412`, :issue:`8013`, "
+"y :issue:`10827`.)"
 
 #: ../Doc/whatsnew/3.2.rst:1042
 msgid "math"
-msgstr ""
+msgstr "math"
 
 #: ../Doc/whatsnew/3.2.rst:1044
 msgid ""
 "The :mod:`math` module has been updated with six new functions inspired by "
 "the C99 standard."
 msgstr ""
+"El módulo :mod:`math` se ha actualizado con seis nuevas funciones inspiradas "
+"en el estándar C99."
 
 #: ../Doc/whatsnew/3.2.rst:1047
 msgid ""
@@ -1591,6 +1622,9 @@ msgid ""
 "detect special values.  It returns ``True`` for regular numbers and "
 "``False`` for *Nan* or *Infinity*:"
 msgstr ""
+"La función :func:`~math.isfinite` proporciona una forma rápida y fiable de "
+"detectar valores especiales. Retorna ``True`` para números regulares y "
+"``False`` para *Nan* o *Infinity*:"
 
 #: ../Doc/whatsnew/3.2.rst:1055
 msgid ""
@@ -1598,6 +1632,9 @@ msgid ""
 "without incurring the loss of precision that usually accompanies the "
 "subtraction of nearly equal quantities:"
 msgstr ""
+"La función :func:`~math.expm1` calcula ``e**x-1`` para valores pequeños de "
+"*x* sin incurrir en la pérdida de precisión que generalmente acompaña a la "
+"resta de cantidades casi iguales:"
 
 #: ../Doc/whatsnew/3.2.rst:1063
 msgid ""
@@ -1605,6 +1642,9 @@ msgid ""
 "error function <https://en.wikipedia.org/wiki/Error_function>`_.  The "
 "complementary error function, :func:`~math.erfc`, is ``1 - erf(x)``:"
 msgstr ""
+"La función :func:`~math.erf` calcula una integral de probabilidad o `función "
+"de error gaussiano <https://es.wikipedia.org/wiki/Funci%C3%B3n_error>`_. La "
+"función de error complementaria, :func:`~math.erfc`, es ``1 - erf(x)``:"
 
 #: ../Doc/whatsnew/3.2.rst:1078
 msgid ""
@@ -1614,20 +1654,28 @@ msgid ""
 "values of *x*, so there is also a :func:`~math.lgamma` function for "
 "computing the natural logarithm of the gamma function:"
 msgstr ""
+"La función :func:`~math.gamma` es una extensión continua de la función "
+"factorial. Consulte https://es.wikipedia.org/wiki/Funci%C3%B3n_gamma para "
+"obtener más detalles. Debido a que la función está relacionada con "
+"factoriales, crece incluso para valores pequeños de *x*, por lo que también "
+"hay una función :func:`~math.lgamma` para calcular el logaritmo natural de "
+"la función gamma:"
 
 #: ../Doc/whatsnew/3.2.rst:1090
 msgid "(Contributed by Mark Dickinson.)"
-msgstr ""
+msgstr "(Contribución de Mark Dickinson.)"
 
 #: ../Doc/whatsnew/3.2.rst:1093
 msgid "abc"
-msgstr ""
+msgstr "abc"
 
 #: ../Doc/whatsnew/3.2.rst:1095
 msgid ""
 "The :mod:`abc` module now supports :func:`~abc.abstractclassmethod` and :"
 "func:`~abc.abstractstaticmethod`."
 msgstr ""
+"El módulo :mod:`abc` ahora admite :func:`~abc.abstractclassmethod` y :func:"
+"`~abc.abstractstaticmethod`."
 
 #: ../Doc/whatsnew/3.2.rst:1098
 msgid ""
@@ -1635,14 +1683,17 @@ msgid ""
 "requires a particular :func:`classmethod` or :func:`staticmethod` to be "
 "implemented::"
 msgstr ""
+"Estas herramientas permiten definir una :term:`abstract base class` que "
+"requiere un func:`classmethod` o :func:`staticmethod` particular para ser "
+"implementado::"
 
 #: ../Doc/whatsnew/3.2.rst:1110
 msgid "(Patch submitted by Daniel Urban; :issue:`5867`.)"
-msgstr ""
+msgstr "(Parche enviado por Daniel Urban; :issue:`5867`.)"
 
 #: ../Doc/whatsnew/3.2.rst:1113
 msgid "io"
-msgstr ""
+msgstr "io"
 
 #: ../Doc/whatsnew/3.2.rst:1115
 msgid ""
@@ -1651,14 +1702,19 @@ msgid ""
 "editable view of the data without making a copy.  The buffer's random access "
 "and support for slice notation are well-suited to in-place editing::"
 msgstr ""
+"La clase :class:`io.BytesIO` tiene un nuevo método, :meth:`~io.BytesIO."
+"getbuffer`, que proporciona una funcionalidad similar a :func:`memoryview`. "
+"Crea una vista editable de los datos sin hacer una copia. El acceso "
+"aleatorio del búfer y la compatibilidad con la notación de sectores son "
+"adecuados para la edición in situ::"
 
 #: ../Doc/whatsnew/3.2.rst:1141
 msgid "(Contributed by Antoine Pitrou in :issue:`5506`.)"
-msgstr ""
+msgstr "(Contribución de Antoine Pitrou en :issue:`5506`.)"
 
 #: ../Doc/whatsnew/3.2.rst:1144
 msgid "reprlib"
-msgstr ""
+msgstr "reprlib"
 
 #: ../Doc/whatsnew/3.2.rst:1146
 msgid ""
@@ -1668,6 +1724,11 @@ msgid ""
 "handle self-reference by displaying \"...\" in the recursive part of the "
 "representation string."
 msgstr ""
+"Al escribir un método :meth:`__repr__` para un contenedor personalizado, es "
+"fácil olvidarse de gestionar el caso en el que un miembro hace referencia al "
+"contenedor en sí. Los objetos incorporados de Python como :class:`list` y :"
+"class:` set` manejan la autorreferencia mostrando \"...\" en la parte "
+"recursiva de la cadena de representación."
 
 #: ../Doc/whatsnew/3.2.rst:1152
 msgid ""
@@ -1675,20 +1736,26 @@ msgid ""
 "new decorator, :func:`~reprlib.recursive_repr`, for detecting recursive "
 "calls to :meth:`__repr__` and substituting a placeholder string instead::"
 msgstr ""
+"Para ayudar a escribir tales métodos :meth:`__repr__`, el módulo :mod:"
+"`reprlib` tiene un nuevo decorador, :func:`~reprlib.recursive_repr`, para "
+"detectar llamadas recursivas a :meth:`__repr__` y sustituir una cadena "
+"marcadora de posición en su lugar::"
 
 #: ../Doc/whatsnew/3.2.rst:1167
 msgid "(Contributed by Raymond Hettinger in :issue:`9826` and :issue:`9840`.)"
-msgstr ""
+msgstr "(Contribución de Raymond Hettinger en :issue:`9826` y :issue:`9840`.)"
 
 #: ../Doc/whatsnew/3.2.rst:1170
 msgid "logging"
-msgstr ""
+msgstr "logging"
 
 #: ../Doc/whatsnew/3.2.rst:1172
 msgid ""
 "In addition to dictionary-based configuration described above, the :mod:"
 "`logging` package has many other improvements."
 msgstr ""
+"Además de la configuración basada en diccionario descrita anteriormente, el "
+"paquete :mod:`logging` tiene muchas otras mejoras."
 
 #: ../Doc/whatsnew/3.2.rst:1175
 msgid ""
@@ -1697,6 +1764,10 @@ msgid ""
 "tutorial>`\\, and a :ref:`cookbook <logging-cookbook>` of logging recipes.  "
 "These documents are the fastest way to learn about logging."
 msgstr ""
+"La documentación de logging se ha aumentado con un :ref:`tutorial básico "
+"<logging-basic-tutorial>`\\, un :ref:`tutorial avanzado <logging-advanced-"
+"tutorial>`\\, y un :ref:`libro de recetas <logging-cookbook>`. Estos "
+"documentos son la forma más rápida de aprender sobre logging."
 
 #: ../Doc/whatsnew/3.2.rst:1180
 #, python-format
@@ -1708,6 +1779,13 @@ msgid ""
 "provided by :class:`string.Template`.  The following three configurations "
 "are equivalent::"
 msgstr ""
+"La función de configuración :func:`logging.basicConfig` adquirió un "
+"argumento *style* para admitir tres tipos diferentes de formato de cadena de "
+"caracteres. Su valor predeterminado es \"%\" para el formato % tradicional, "
+"se puede establecer en \"{\" para el nuevo estilo :meth:`str.format`, o se "
+"puede establecer en \"$\" para el formato de estilo shell proporcionado por :"
+"class:`string.Template`. Las siguientes tres configuraciones son "
+"equivalentes::"
 
 #: ../Doc/whatsnew/3.2.rst:1191
 msgid ""
@@ -1736,7 +1814,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1208
 msgid "csv"
-msgstr ""
+msgstr "csv"
 
 #: ../Doc/whatsnew/3.2.rst:1210
 msgid ""
@@ -1760,7 +1838,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1232
 msgid "contextlib"
-msgstr ""
+msgstr "contextlib"
 
 #: ../Doc/whatsnew/3.2.rst:1234
 msgid ""
@@ -1823,7 +1901,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1289
 msgid "decimal and fractions"
-msgstr ""
+msgstr "decimal and fractions"
 
 #: ../Doc/whatsnew/3.2.rst:1291
 msgid ""
@@ -1887,7 +1965,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1341
 msgid "ftp"
-msgstr ""
+msgstr "ftp"
 
 #: ../Doc/whatsnew/3.2.rst:1343
 msgid ""
@@ -1922,7 +2000,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1375
 msgid "popen"
-msgstr ""
+msgstr "popen"
 
 #: ../Doc/whatsnew/3.2.rst:1377
 msgid ""
@@ -1938,7 +2016,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1384
 msgid "select"
-msgstr ""
+msgstr "select"
 
 #: ../Doc/whatsnew/3.2.rst:1386
 msgid ""
@@ -1954,7 +2032,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1398
 msgid "gzip and zipfile"
-msgstr ""
+msgstr "gzip y zipfile"
 
 #: ../Doc/whatsnew/3.2.rst:1400
 msgid ""
@@ -1994,7 +2072,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1435
 msgid "tarfile"
-msgstr ""
+msgstr "tarfile"
 
 #: ../Doc/whatsnew/3.2.rst:1437
 msgid ""
@@ -2021,7 +2099,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1469
 msgid "hashlib"
-msgstr ""
+msgstr "hashlib"
 
 #: ../Doc/whatsnew/3.2.rst:1471
 msgid ""
@@ -2036,7 +2114,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1489
 msgid "ast"
-msgstr ""
+msgstr "ast"
 
 #: ../Doc/whatsnew/3.2.rst:1491
 msgid ""
@@ -2054,7 +2132,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1515
 msgid "os"
-msgstr ""
+msgstr "os"
 
 #: ../Doc/whatsnew/3.2.rst:1517
 msgid ""
@@ -2084,7 +2162,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.2.rst:1538
 msgid "shutil"
-msgstr ""
+msgstr "shutil"
 
 #: ../Doc/whatsnew/3.2.rst:1540
 msgid "The :func:`shutil.copytree` function has two new options:"
