--- a/whatsnew/index.po
+++ b/whatsnew/index.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/index.rst:5
 msgid "What's New in Python"
-msgstr "Que hay de nuevo en Python"
+msgstr "Qué hay de nuevo en Python"
 
 #: ../Doc/whatsnew/index.rst:7
 msgid ""
@@ -29,7 +29,7 @@ msgid ""
 "important changes between major Python versions.  They are a \"must read\" "
 "for anyone wishing to stay up-to-date after a new release."
 msgstr ""
-"La serie \"Que hay de nuevo en Python\" da un vistazo a los cambios más "
+"La serie \"Qué hay de nuevo en Python\" da un vistazo a los cambios más "
 "importantes entre las versiones de Python. Son de \"lectura obligatoria\" "
 "para cualquier persona que quiera estar al día después de un nuevo "
 "lanzamiento."
